# contenthub

./: .gitignore  AGENTS.md  AURORA_FINAL_AUDIT.md  AURORA_IMPROVEMENT_DESIGN.md  AURORA_PROGRESS_REPORT.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_2026-04-22.md  MEMORY.md  MERGE_READINESS.md  README.md  USER_GUIDE.md  audit_plan.md  github links.md  integration_plan.md  settings.local.json  start.sh
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ee09dfddce7_add_news_items_table.py  221401c433cc_m41a_add_render_format_karaoke_to_.py  2472507548c3_add_standard_video_scripts_table.py  2e7eb44ff9c8_add_templates_table.py  3771f6696ce2_add_used_news_registry_table.py  3d2bdaf23628_add_news_bulletin_metadata_table.py  485edfc2f2b5_add_news_bulletin_scripts_table.py  5769e14d7322_add_source_scans_table.py  5c6754cd1d40_add_edited_narration_to_bulletin_.py  6efaa317abdf_m41_add_image_url_to_news_items.py  705dbe9d9ef1_add_style_blueprints_table.py  721a304e877f_add_news_bulletin_selected_items_table.py  87a789ff3f45_faz2_add_domain_models_channel_project_.py  8c913edf5154_add_news_bulletins_table.py  9841ba491fcb_faz5a_add_project_channel_linkage_columns.py  9d97ec750399_add_template_style_links_table.py  a1078575e258_add_news_sources_table.py  a1a352449e66_m41a_add_image_urls_json_to_news_items.py  a1b2c3d4e5f6_m29_add_direction_fields_to_bulletin.py  a2b3c4d5e6f7_add_step_scope_to_prompt_blocks.py  a3f1c2d4e5b6_m1_c1_add_idempotency_type_provider_trace_heartbeat.py  aurora_surface_001_drop_atrium_bridge_canvas_orphans.py  b1c2d3e4f5a6_add_input_data_json_to_jobs.py  b2c3d4e5f6a7_m30_add_render_mode_subtitle_trust.py  b3c4d5e6f7a8_m40_add_user_slug_and_setting_overrides.py  bf791934579f_add_standard_videos_table.py  branding_center_001_brand_profile_extension.py  c1a2b3d4e5f6_m7_c1_add_publish_records_and_logs.py  c3d4e5f6a7b8_m31_add_is_test_data_to_jobs.py  catchup_001_add_missing_indexes.py  cc4f6789756e_add_video_stats_snapshots_table.py  d4e5f6a7b8c9_m32_add_wizard_configs_table.py  dddfc15f2434_m42_add_karaoke_anim_preset_to_bulletins.py  de267292b2ab_add_visibility_rules_table.py  (+22 more)
backend/app/: main.py
backend/data/: contenthub.db  contenthub.db-shm  contenthub.db-wal  contenthub_backup_20260407_182625.db
backend/scripts/: activate_surfaces.py  aurora_test_seed.py  aurora_test_seed_extras.py  backup_db.py  cleanup_test_jobs.py  drift_repair.py  e2e_full_auto_seed.py  gate3_smoke.py  restore_db.py  seed_wizard_configs.py
backend/tests/: conftest.py  test_assembly_service.py  test_branding_automation_centers.py  test_condition_evaluator.py  test_db_bootstrap.py  test_execution_contracts.py  test_faz10_channel_performance.py  test_faz11_publish_v2.py  test_faz12_template_gallery_preview.py  test_faz13_automation_policy_inbox.py  test_faz14_calendar.py  test_faz15_event_hooks.py  test_faz16_notifications.py  test_faz16a_notification_closure.py  test_faz17_connection_center.py  test_faz17a_capability_guard.py  test_faz2_runtime_resilience.py  test_faz3_backup_restore.py  test_faz3_first_run_bootstrap.py  test_faz3_upgrade_compatibility.py  test_faz5a_project_channel_wiring.py  test_faz6_analytics_filters.py  test_faz7_comments.py  test_faz8_playlists.py  test_faz9_posts.py  test_full_auto_cron.py  test_full_auto_service.py  test_gate4_publish_closure.py  test_gate5_analytics_closure.py  test_gate_sources_closure.py  test_health.py  test_job_transitions.py  test_jobs_api.py  test_m10_settings_resolver.py  test_m13_template_runtime.py  test_m14_template_context.py  test_m14_youtube_analytics.py  test_m15_audit_log.py  test_m15_provider_trace.py  test_m16_audit_hardening.py  (+121 more)
(+2237 files in other folders)
